Fix overlaping trips [f:30m]

--- a/src/components/TripsTimeline/TripsTimeline.css
+++ b/src/components/TripsTimeline/TripsTimeline.css
@@ -2,19 +2,22 @@
 
 .trips-timeline {
   & .trip-list {
+    display: flex;
+    flex-wrap: nowrap;
     list-style: none;
     margin: 0;
-    mask-image: linear-gradient(to right, #000 0%, #000 90%, rgba(0, 0, 0, 0) 100%);
+    mask-image: linear-gradient(to right, #000, #000 calc(100% - 3rem), rgba(0, 0, 0, 0));
     overflow-x: auto;
     padding: 0;
     white-space: nowrap;
 
     & .trip-item {
+      flex: 1 0 auto;
       display: inline-block;
       white-space: normal;
 
       & + .trip-item {
-        margin-left: 1.5rem;
+        margin-left: 2.5rem;
       }
     }
   }
